{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 57,
  "lineage": "979e3dd1-11ea-5431-4bf5-65d1611fb70a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:security-group/sg-084eb14bcc814c4fd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-084eb14bcc814c4fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2021121608470598110000000a",
            "name_prefix": "all_worker_management",
            "owner_id": "822294841932",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:security-group/sg-022d15b72f6914472",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-022d15b72f6914472",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20211216084705981000000009",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "822294841932",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:security-group/sg-03a114c18790342d7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03a114c18790342d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2021121608470598110000000b",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "822294841932",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:security-group/sg-0355c30c026334b46",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0355c30c026334b46",
            "ingress": [],
            "name": "dev-eks-pqSfLLJJ2021121608470691290000000c",
            "name_prefix": "dev-eks-pqSfLLJJ",
            "owner_id": "822294841932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "dev-eks-pqSfLLJJ-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "dev-eks-pqSfLLJJ-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:security-group/sg-092063aade2ae3fb8",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-092063aade2ae3fb8",
            "ingress": [],
            "name": "dev-eks-pqSfLLJJ2021121608470691300000000d",
            "name_prefix": "dev-eks-pqSfLLJJ",
            "owner_id": "822294841932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "dev-eks-pqSfLLJJ-eks_worker_sg",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "owned"
            },
            "tags_all": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "dev-eks-pqSfLLJJ-eks_worker_sg",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-548361885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0355c30c026334b46",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-514514029",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0355c30c026334b46",
            "self": false,
            "source_security_group_id": "sg-092063aade2ae3fb8",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3565810482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-092063aade2ae3fb8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-613425234",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-092063aade2ae3fb8",
            "self": false,
            "source_security_group_id": "sg-0355c30c026334b46",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3762126468",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-092063aade2ae3fb8",
            "self": false,
            "source_security_group_id": "sg-0355c30c026334b46",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2377713785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-092063aade2ae3fb8",
            "self": false,
            "source_security_group_id": "sg-092063aade2ae3fb8",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c8d0593ed5e5204",
            "domain": "vpc",
            "id": "eipalloc-02c8d0593ed5e5204",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-159-32-123.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.32.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-vpc-eu-central-1a",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "tags_all": {
              "Name": "dev-vpc-eu-central-1a",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:internet-gateway/igw-0d6c476b37ac09bcc",
            "id": "igw-0d6c476b37ac09bcc",
            "owner_id": "822294841932",
            "tags": {
              "Name": "dev-vpc",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c8d0593ed5e5204",
            "connectivity_type": "public",
            "id": "nat-0bf75d18b26841a03",
            "network_interface_id": "eni-01a8d0ba682d5e89e",
            "private_ip": "10.0.4.181",
            "public_ip": "18.159.32.123",
            "subnet_id": "subnet-09335e22c3c33c4fa",
            "tags": {
              "Name": "dev-vpc-eu-central-1a",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "tags_all": {
              "Name": "dev-vpc-eu-central-1a",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01cfbf41f480dc7961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bf75d18b26841a03",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01cfbf41f480dc796",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d6c476b37ac09bcc",
            "id": "r-rtb-05b9386b5d944bedb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b9386b5d944bedb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:route-table/rtb-01cfbf41f480dc796",
            "id": "rtb-01cfbf41f480dc796",
            "owner_id": "822294841932",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-vpc-private",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "tags_all": {
              "Name": "dev-vpc-private",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:route-table/rtb-05b9386b5d944bedb",
            "id": "rtb-05b9386b5d944bedb",
            "owner_id": "822294841932",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-vpc-public",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "tags_all": {
              "Name": "dev-vpc-public",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055b556ed75b190d4",
            "route_table_id": "rtb-01cfbf41f480dc796",
            "subnet_id": "subnet-019c9504256684d58"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038215189227b536a",
            "route_table_id": "rtb-01cfbf41f480dc796",
            "subnet_id": "subnet-08ba715cd4be594d2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0408dc91d94b11a72",
            "route_table_id": "rtb-01cfbf41f480dc796",
            "subnet_id": "subnet-0368764f41fbda1bf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db15deb609a98e4f",
            "route_table_id": "rtb-05b9386b5d944bedb",
            "subnet_id": "subnet-09335e22c3c33c4fa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083c189e5cc6b9aa7",
            "route_table_id": "rtb-05b9386b5d944bedb",
            "subnet_id": "subnet-0e3458a9cbd1a5cb7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9451a03f2e7ce1a",
            "route_table_id": "rtb-05b9386b5d944bedb",
            "subnet_id": "subnet-0ba7228393e8dc8b8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:subnet/subnet-019c9504256684d58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-019c9504256684d58",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822294841932",
            "tags": {
              "Name": "dev-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:subnet/subnet-08ba715cd4be594d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08ba715cd4be594d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822294841932",
            "tags": {
              "Name": "dev-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:subnet/subnet-0368764f41fbda1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0368764f41fbda1bf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822294841932",
            "tags": {
              "Name": "dev-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:subnet/subnet-09335e22c3c33c4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-09335e22c3c33c4fa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "822294841932",
            "tags": {
              "Name": "dev-vpc-public-eu-central-1a",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-vpc-public-eu-central-1a",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:subnet/subnet-0e3458a9cbd1a5cb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0e3458a9cbd1a5cb7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "822294841932",
            "tags": {
              "Name": "dev-vpc-public-eu-central-1b",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-vpc-public-eu-central-1b",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:subnet/subnet-0ba7228393e8dc8b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0ba7228393e8dc8b8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "822294841932",
            "tags": {
              "Name": "dev-vpc-public-eu-central-1c",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-vpc-public-eu-central-1c",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae6d167e5e40b9ac"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:822294841932:vpc/vpc-0ae6d167e5e40b9ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d937f8c52379257d",
            "default_route_table_id": "rtb-0a85e1579b1ab93e0",
            "default_security_group_id": "sg-090ae2819ecf7b884",
            "dhcp_options_id": "dopt-0ab14463",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ae6d167e5e40b9ac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a85e1579b1ab93e0",
            "owner_id": "822294841932",
            "tags": {
              "Name": "dev-vpc",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "kubernetes.io/cluster/dev-eks-pqSfLLJJ": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}